rsvp controller created but nothing done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,8 @@
 </head>
 <body>
 <div class="container">
-	what about now
 	<div class="row">
-		<div class="span3">about us</div>
+		<div class="span3"><%= render partial: 'side_bar' %></div>
 		<div class="span9"><%= yield %></div>
 	</div>
 </div>
