--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class="container">
+	<%= image_tag("zandk.jpg", :alt => "rss feed", :class => 'img-rounded', :id => 'top-image') %>
 	<div class="row">
 		<div class="span3"><%= render partial: 'side_bar' %></div>
 		<div class="span9"><%= yield %></div>
