--- a/app/views/static_pages/_side_bar.html.erb
+++ b/app/views/static_pages/_side_bar.html.erb
@@ -1,5 +1,6 @@
+<%= link_to('Home', root_path) %></br>
 RSVP</br>
-Contact</br>
+<%= link_to('Contact', contact_path)%></br>
 Images</br>
 GuestBook</br>
 Recent News</br>
