--- a/app/views/static_pages/_side_bar.html.erb
+++ b/app/views/static_pages/_side_bar.html.erb
@@ -2,6 +2,6 @@
 RSVP</br>
 <%= link_to('Contact', contact_path)%></br>
 Images</br>
-GuestBook</br>
-Recent News</br>
-Locations</br>
+<%= link_to('Guestbook', guestbooks_path)%></br>
+Blog/Updates</br>
+<%= link_to('About Tehachapi', tehachapi_path)%></br>
