--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,3 +27,17 @@ border-color: #d6e9c6;
 color: #468847;
 text-align: left;
 }
+
+a.disable-hover:hover
+{
+  background-color: transparent; 
+  text-decoration: none;
+}
+
+.fa-flag{
+	color:red;
+}
+
+.fa-flag-o{
+	color:grey;
+}
