--- a/app/views/guestbooks/index.html.erb
+++ b/app/views/guestbooks/index.html.erb
@@ -1,6 +1,6 @@
 
 <h1>The Guestbooks</h1>
-
+<%= link_to('Admin', manage_guestbooks_path) %>
 <%= render partial: 'form' %>
 
 <%= paginate @guestbooks %>
