--- a/app/views/static_pages/tehachapi.html.erb
+++ b/app/views/static_pages/tehachapi.html.erb
@@ -1,1 +1,7 @@
-This is about tehacapi
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC2jnFNLoXJAeIG9Eo1qIWEGmZNhxf1Em8
+    &q=Tehachapi+CA">
+</iframe>
