--- a/app/views/static_pages/_side_bar.html.erb
+++ b/app/views/static_pages/_side_bar.html.erb
@@ -3,5 +3,5 @@ RSVP</br>
 <%= link_to('Contact', contact_path)%></br>
 Images</br>
 <%= link_to('Guestbook', guestbooks_path)%></br>
-Blog/Updates</br>
+<%= link_to('Blog/Updates', blogs_path) %></br>
 <%= link_to('About Tehachapi', tehachapi_path)%></br>
