--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,33 @@
+<!-- carousel -->
+<div id="myCarousel" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="http://i.imgur.com/skEDGuo.png" alt="foo">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>These dudes gay</h1>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <img src="http://i.imgur.com/7TsAXnA.jpg" alt="foo">
+    </div>
+    <div class="item">
+      <img src="http://i.imgur.com/MNUOBEA.jpg" alt="foo">
+    </div>
+    <div class="item">
+      <img src="http://i.imgur.com/khAVTfJ.jpg" alt="foo">
+    </div>
+    <div class="item">
+      <img src="https://33.media.tumblr.com/8d044dcfcc872afd211ee96fe68cdece/tumblr_n3r7pe0mO51s2yegdo1_400.gif" alt="foo">
+    </div>
+    <div class="item">
+      <img src="http://i.imgur.com/Joh3xxK.jpg" alt="foo">
+    </div>
+  </div>
+</div><!-- /.carousel -->
+
+
 Wedding Location: Tehahacpi
 </br>
 </br>
