--- a/app/views/static_pages/hotels.html.erb
+++ b/app/views/static_pages/hotels.html.erb
@@ -1,12 +1,24 @@
-<iframe
-  width="600"
-  height="450"
-  frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC2jnFNLoXJAeIG9Eo1qIWEGmZNhxf1Em8&q=500+E+Steuber+Rd+Tehachapi+CA,418+W+Tehachapi+Blvd">
-</iframe>
-</br>
-<%= link_to('Hotels','tehachapi/hotels', id: 'hotels_js', remote: true) %>
-<%= link_to('Hotels','tehachapi/restaurants', id: 'hotels_js', remote: true) %>
 <div class="results">
-<%= render partial: 'hotel_listing' %>
+	<iframe
+	  width="600"
+	  height="450"
+	  frameborder="0" style="border:0"
+	  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC2jnFNLoXJAeIG9Eo1qIWEGmZNhxf1Em8&q=500+E+Steuber+Rd+Tehachapi+CA,418+W+Tehachapi+Blvd">
+	</iframe>
+	</br>
+	<div>
+		<% @hotels.each do |hotel| %>
+		  <h2><%= hotel['name'] %></h2>
+		  <% if hotel['logo'] %>
+		  	<%= image_tag("hotel_images/#{hotel['logo']}", size: "160x100") %>
+		  <% end %>
+		  <%= hotel['address'] %>
+		  <%= hotel['phone'] %>
+		  <%= hotel['rating'] %>/5 stars
+		  <%= hotel['price'] %>
+		  <% if hotel['image'] %>
+		  	<%= image_tag("hotel_images/#{hotel['image']}", size: "160x100") %>
+	  	<% end %>
+		<% end %>
+	</div>
 </div>
