--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require_tree .
+ *= require bootstrap
  */
 
 #top-image {
@@ -17,4 +18,30 @@
 	margin-left: auto;
   margin-right: auto;
 	width:15%;
+}
+
+#carousel-example-generic {
+	width:700px;
+	height:300px;
+}
+
+body {
+	background: #00ffff url('background.png');
+}
+
+#side-bar {
+	background: #00ff04;
+}
+
+#main-body {
+	background: #0015ff;
+}
+
+#header {
+	background: #ff0000;
+	height:30em;
+}
+
+#content {
+	margin: 100px 100px;
 }
