--- a/app/views/static_pages/_side_bar.html.erb
+++ b/app/views/static_pages/_side_bar.html.erb
@@ -1,12 +1,8 @@
-
-      <div class="container">
-        <ul class="nav">
-          <li><a href="<%= root_path %>">Home</a></li>
-          <li><a href="#">RSVP</a></li>
-          <li><a href="<%= contact_path %>">Contact</a></li>
-          <li><a href="<%= guestbooks_path%>">GuestBook</a></li>
-          <li><a href="<%= blogs_path %>">Updates</a></li>
-          <li><a href="<%= tehachapi_path %>">Hotels/Resturants</a></li>
-        </ul>
-      </div>
-   
+<ul class="nav nav-pills nav-stacked">
+  <li><a class="btn btn-default" href="<%= root_path %>">Home</a></li>
+  <li><a class="btn btn-default" href="#">RSVP</a></li>
+  <li><a class="btn btn-default" href="<%= contact_path %>">Contact</a></li>
+  <li><a class="btn btn-default" href="<%= guestbooks_path%>">GuestBook</a></li>
+  <li><a class="btn btn-default" href="<%= blogs_path %>">Updates</a></li>
+  <li><a class="btn btn-default" href="<%= tehachapi_index_path %>">Tehachapi</a></li>
+</ul>
