--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,31 +1,42 @@
-<!-- carousel -->
-<div id="myCarousel" class="carousel slide">
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="http://i.imgur.com/skEDGuo.png" alt="foo">
-      <div class="container">
-        <div class="carousel-caption">
-          <h1>These dudes gay</h1>
-        </div>
-      </div>
-    </div>
-    <div class="item">
-      <img src="http://i.imgur.com/7TsAXnA.jpg" alt="foo">
-    </div>
-    <div class="item">
-      <img src="http://i.imgur.com/MNUOBEA.jpg" alt="foo">
-    </div>
-    <div class="item">
-      <img src="http://i.imgur.com/khAVTfJ.jpg" alt="foo">
-    </div>
-    <div class="item">
-      <img src="https://33.media.tumblr.com/8d044dcfcc872afd211ee96fe68cdece/tumblr_n3r7pe0mO51s2yegdo1_400.gif" alt="foo">
-    </div>
-    <div class="item">
-      <img src="http://i.imgur.com/Joh3xxK.jpg" alt="foo">
-    </div>
-  </div>
-</div><!-- /.carousel -->
+<div class="container">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  
+<!-- Indicators -->
+<ol class="carousel-indicators">
+<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+</ol>
+  
+<!-- Wrapper for slides -->
+<div class="carousel-inner">
+<div class="item active">
+<img src="http://placehold.it/700x400.jpg" alt="...">
+</div>
+
+<div class="item">
+<img src="http://placehold.it/700x400.jpg" alt="...">
+</div>
+
+<div class="item">
+<img src="http://placehold.it/700x400.jpg" alt="...">
+</div>
+</div>
+  
+<!-- Controls -->
+<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+<span class="glyphicon glyphicon-chevron-left"></span>
+</a>
+<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+<span class="glyphicon glyphicon-chevron-right"></span>
+</a>
+  
+</div>
+  
+
+
+</div><!--//container -->
+
 
 
 Wedding Location: Tehahacpi
