--- a/app/assets/stylesheets/guestbooks.css.scss
+++ b/app/assets/stylesheets/guestbooks.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Guestbooks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.text-right {
+	text-align:right;
+}
+
+#guestbook-form {
+	display: block;
+	border: 1px solid;
+  border-radius: 25px;
+  padding: 20px 20px;
+}
+.guestbook-message {
+	margin-bottom:20px;
+  border-radius: 25px;
+  background-color: #ffffff;
+  padding: 10px 10px;
+}
