--- a/app/views/guestbooks/_form.html.erb
+++ b/app/views/guestbooks/_form.html.erb
@@ -1,16 +1,19 @@
+<div id="guestbook-form">
 <%= form_for(@guestbook) do |f| %>
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+  <div class="actions">
+    <%= f.submit 'Leave Message'%>
+  </div>
+  </br>
   <div class="field">
     <%= f.label :message %><br>
     <%= f.text_area :message %>
   </div>
-  <div class="actions">
-    <%= f.submit 'Leave Message'%>
-  </div>
 <% end %>
 <div class='warning'>
   * can not be changed
+</div>
 </div>
