--- a/app/views/tehachapi/_hotel_listing.html.erb
+++ b/app/views/tehachapi/_hotel_listing.html.erb
@@ -1,4 +1,5 @@
-<div class="results">
+<div class="container">
+	<h1>Hotels</h1>
 	<iframe
 	  width="600"
 	  height="450"
@@ -8,17 +9,28 @@
 	</br>
 	<div>
 		<% @hotels.each do |hotel| %>
-		  <h2><%= hotel['name'] %></h2>
-		  <% if hotel['logo'] %>
-		  	<%= image_tag("hotel_images/#{hotel['logo']}", size: "160x100") %>
-		  <% end %>
-		  <%= hotel['address'] %>
-		  <%= hotel['phone'] %>
-		  <%= hotel['rating'] %>/5 stars
-		  <%= hotel['price'] %>
-		  <% if hotel['image'] %>
-		  	<%= image_tag("hotel_images/#{hotel['image']}", size: "160x100") %>
-	  	<% end %>
+			<div class="row-inline">
+			  <h2><%= hotel['name'] %></h2>
+			  <div class=".col-md-4">
+			  	<% if hotel['logo'] %>
+			  		<%= image_tag("hotel_images/#{hotel['logo']}", size: "160x100") %>
+			  	<% end %>
+				</div>
+			  <div class=".col-md-4">
+				  <%= hotel['address'] %>
+					</br>
+				  <%= hotel['phone'] %>
+				  </br>
+				  <%= hotel['rating'] %>/5 stars
+				  </br>
+				  <%= hotel['price'] %>
+				</div>
+				<div class=".col-md-4">
+			  	<% if hotel['image'] %>
+			  		<%= image_tag("hotel_images/#{hotel['image']}", size: "160x100") %>
+		  		<% end %>
+		  	</div>
+		  </div>
 		<% end %>
 	</div>
 </div>
