removes unused bootstrap. removes lots of unneeded
stuff. added top nav bar

--- a/app/views/guestbooks/index.html.erb
+++ b/app/views/guestbooks/index.html.erb
@@ -1,8 +1,8 @@
 <p>
   <h1 class="text-center">The Guestbook</h1>
-  <span class="text-right">
+  <div class="text-right" align="right">
     <%= link_to('Admin', manage_guestbooks_path) %>
-  </span>
+  </div>
 </p>
 
 <%= render partial: 'form' %>
@@ -24,7 +24,7 @@
       </div>
     </div>
   </div>
-</div> 
+</div>
 <% end %>
 
 <br>
