--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,9 +8,10 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require bootstrap.min
+ *= require my_styles
  *= require_self
  *= require_tree .
- *= require bootstrap
  */
 
 #top-image {
@@ -56,4 +57,8 @@ body {
 }
 
 #sunflower {
+}
+
+#btn {
+	background-color: red;
 }
