--- a/app/views/guestbooks/_form.html.erb
+++ b/app/views/guestbooks/_form.html.erb
@@ -1,19 +1,30 @@
 <div id="guestbook-form">
-<%= form_for(@guestbook) do |f| %>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+<form class="form-horizontal" role="form">
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit 'Leave Message'%>
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+    </div>
   </div>
-  </br>
-  <div class="field">
-    <%= f.label :message %><br>
-    <%= f.text_area :message %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Remember me
+        </label>
+      </div>
+    </div>
   </div>
-<% end %>
-<div class='warning'>
-  * can not be changed
-</div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Sign in</button>
+    </div>
+  </div>
+</form>
 </div>
