--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -15,6 +15,9 @@ div.my-form {
 img.my-images {
 	margin-left: auto;
   margin-right: auto;
+  border: 1px solid;
+  border-radius: 5px;
+  padding: 10px 10px;
 }
 
 .white-background {
