--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 
 			<div id="footer" class="row">
 				<div class="col-md-12">
-					<%= image_tag("elephants.png", :alt => "banner", :id => 'top-image', class: 'img-responsive') %>
+					<%= image_tag("elephants.png", :alt => "banner", :id => 'top-image', class: 'img-responsive', id: 'footer-image') %>
 				</div>
 			</div>
 
