--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 <div class="body-title">
-  <h1 class="text-center ">Hotels</h1>
+  <h1 class="text-center ">Contact</h1>
 </div>
 <div class="row">
   <div class="my-form">
