--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,11 +1,11 @@
 <div class='my-form'>
-<b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %>
+<b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehahcapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %>
 </br>
 </br>
 <b>Date:</b> August 30, 2014
 </br>
 </br>
-Dont forget to RSVP and sign the digital guestbook!
+Please RSVP and sign the digital guestbook!
 </br>
 </br>
 If you have a question please select "Contact" from the link above. Remember we are busy trying to set up a wedding so we may not be able to respond to every question and if we do respond it could take time.
