--- a/app/views/static_pages/hotels.html.erb
+++ b/app/views/static_pages/hotels.html.erb
@@ -4,7 +4,7 @@
 <div class="white-background">
 <p id="hotel-welcome">
 	<b>
-		For our out of town guests we invite you to stay in one of our many hotels and experince the town of tehachapi. Listed below are most of the hotels found in town. We have left off the hotels that we ourselves would not stay at. 
+		For our out of town guests we invite you to stay in one of our many hotels and experince the town of Tehachapi. Listed below are most of the hotels found in town. We have left off the hotels that we ourselves would not stay at. 
 	</b>
 </p>
 
@@ -14,9 +14,7 @@
     <h3 class="panel-title">Holiday Inn Express group rate information</h3>
   </div>
   <div class="panel-body">
-    We have reserved a block of rooms at Holiday Inn Express (the top hotel) for us to use. Using this hotel we get discounted rates, allows cancellations and does not charge your card until the stay. From this hotel it will take about 35 minutes to reach the wedding destination.
-	</p>
-	<p><b>To get the discount rate use the group code JLW</b></p>
+    If you use the code JLW at the <b>Holiday Inn Express Hotel</b> reservation site you can get discounted rates, wavied cancellation fees and more.
   </div>
 </div>
 </div>
