--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
 <div class='my-form'>
-<b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehahcapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %>
+<b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehachapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %>
 </br>
 </br>
 <b>Date:</b> August 30, 2014
