--- a/app/views/static_pages/_top_bar.html.erb
+++ b/app/views/static_pages/_top_bar.html.erb
@@ -10,9 +10,9 @@
       <div class="btn-group">
         <a href="<%= registry_path %>" class="btn btn-default navbar-btn buttons-mine">Registry</a>
       </div>
-      <div class="btn-group">
+      <!-- <div class="btn-group">
         <a href="<%= contact_path %>" class="btn btn-default navbar-btn buttons-mine">Contact</a>
-      </div>
+      </div> -->
       <div class="btn-group">
         <a href="<%= guestbooks_path %>" class="btn btn-default navbar-btn buttons-mine">Guestbook</a>
       </div>
