remove contact and add time

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,10 +5,10 @@
 <b>Date:</b> August 30, 2014
 </br>
 </br>
+<b>Start Time:</b> 6pm
+</br>
+</br>
 Please RSVP and sign the digital guestbook!
-</br>
-</br>
-If you have a question please select "Contact" from the link above. Remember we are busy trying to set up a wedding so we may not be able to respond to every question and if we do respond it could take time.
 </br>
 </br>
 </div>
