fixed redirect in rsvp edit

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -11,5 +11,8 @@
 Please RSVP and sign the digital guestbook!
 </br>
 </br>
+If you mess up on your RSVP contact Katie, Zack, Brandon or Colleen and they can fix it for you.
+</br>
+</br>
 </div>
 
