--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -42,7 +42,7 @@
       <div class="field control-label disabled form-group" id="party_size_js">
         <%= f.label :party_size %>
         <small>Total people in your party including yourself</small>
-        <%= f.number_field :party_size, class: 'form-control', value: '0' %>
+        <%= f.number_field :party_size, class: 'form-control', value: "#{@default_value}" %>
       </div>
         </br>
       <div class="actions form-group">
