--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,5 @@
-<div class='my-form'>
+<div class='my-home-form'>
+	<%= render 'image_carousel' %>
 <b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehachapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %>
 </br>
 </br>
