added bullets to image csl

--- a/app/views/static_pages/_image_carousel.html.erb
+++ b/app/views/static_pages/_image_carousel.html.erb
@@ -1,29 +1,35 @@
 <!--  Carousel - consult the Twitter Bootstrap docs at 
       http://twitter.github.com/bootstrap/javascript.html#carousel -->
 <div id="this-carousel-id" class="carousel slide"><!-- class of slide for animation -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
   <div class="carousel-inner">
     <div class="item active"><!-- class of active since it's the first item -->
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>Caption text here</p>
+        <p>Jim</p>
       </div>
     </div>
     <div class="item">
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>Caption text here</p>
+        <p>Is</p>
       </div>
     </div>
     <div class="item">
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>Caption text here</p>
+        <p>So</p>
       </div>
     </div>
     <div class="item">
       <img src="http://placehold.it/1200x480" alt="" />
       <div class="carousel-caption">
-        <p>Caption text here</p>
+        <p>Gay</p>
       </div>
     </div>
   </div><!-- /.carousel-inner -->
