--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -12,6 +12,10 @@ div.my-form {
   text-align: center;
 }
 
+h1 {
+	font-family: "alger";
+}
+
 img.my-images {
 	margin-left: auto;
   margin-right: auto;
@@ -23,12 +27,6 @@ img.my-images {
 .white-background {
 	background-color: white;
 	border-radius: 5px;
-}
-
-
-@font-face {
-    font-family: myFirstFont;
-    src: url(sansation_light.woff);
 }
 
 nav.pagination{
@@ -89,4 +87,9 @@ a:hover
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
+}
+
+@font-face {
+	font-family: "alger";
+	src: url(/assets/fonts/ALGER.TTG);
 }
