--- a/app/views/rsvps/edit.html.erb
+++ b/app/views/rsvps/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @rsvp %> |
-<%= link_to 'Back', rsvps_path %>
+<p><%= link_to 'Show', @rsvp %> |
+<%= link_to 'Back', rsvps_path %> </p>
