--- a/app/views/rsvps/new.html.erb
+++ b/app/views/rsvps/new.html.erb
@@ -1,7 +1,6 @@
-<p>
-  <h1 class="text-center">RSVP</h1>
-  <div class="text-right" align="right">
-    <%= link_to('Admin', rsvps_path) %>
-  </div>
-</p>
+<h1 class="text-center">RSVP</h1>
+<div class="text-right" align="right">
+  <p><%= link_to('Admin', rsvps_path) %></p>
+</div>
+
 <%= render 'form' %>
