--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,14 +1,14 @@
 <div class='my-form'>
-<b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehahcapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %>
+<p class="font-medium"><b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehahcapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %></p>
 </br>
 </br>
-<b>Date:</b> August 30, 2014
+<p class="font-medium"><b>Date:</b> August 30, 2014</p>
 </br>
 </br>
-Please RSVP and sign the digital guestbook!
+<p class="font-medium">Please RSVP and sign the digital guestbook!</p>
 </br>
 </br>
-If you have a question please select "Contact" from the link above. Remember we are busy trying to set up a wedding so we may not be able to respond to every question and if we do respond it could take time.
+<p class="font-medium">If you have a question please select "Contact" from the link above. Remember we are busy trying to set up a wedding so we may not be able to respond to every question and if we do respond it could take time.</p>
 </br>
 </br>
 </div>
