--- a/app/assets/stylesheets/guestbooks.css.scss
+++ b/app/assets/stylesheets/guestbooks.css.scss
@@ -5,12 +5,12 @@
 	text-align:right;
 }
 
-#guestbook-form {
-	display: block;
-	border: 1px solid;
-  border-radius: 25px;
-  padding: 20px 20px;
-}
+// #guestbook-form {
+// 	display: block;
+// 	border: 1px solid;
+//   border-radius: 25px;
+//   padding: 20px 20px;
+// }
 .guestbook-message {
 	margin-bottom:20px;
   border-radius: 25px;
