--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -89,7 +89,29 @@ a:hover
   margin-top: 20px;
 }
 
+p {
+	font-family: "goudos";
+}
+
 @font-face {
 	font-family: "alger";
-	src: url(/assets/fonts/ALGER.TTG);
+	src: asset-url(/assets/fonts/ALGER.TTG);
+}
+
+@font-face {
+	font-family: "goudos";
+	src: asset-url(/assets/fonts/GOUDOS.TTG);
+}
+
+.font-large {
+	font-size:1.8em;
+	margin: 0px 0px 0px 0px;
+}
+
+.font-medium {
+	font-size:1.2em;
+}
+
+#guestbook-form {
+	padding: 20px 20px;
 }
