--- a/app/views/rsvps/_form.html.erb
+++ b/app/views/rsvps/_form.html.erb
@@ -19,34 +19,34 @@
     <%= form_for(@rsvp, html: {role: 'form' }) do |f| %>
 
       <div class="field control-label form-group" >
-        <%= f.label :name %>
+        <p><%= f.label :name %>
         <small>Family or Individual name</small>
-        <%= f.text_field :name, required: '', class: 'form-control'  %>
+        <%= f.text_field :name, required: '', class: 'form-control'  %></p>
       </div>
       <div class="field control-label form-group" >
-        <%= f.label :contact %>
+        <p><%= f.label :contact %>
         <small>Email, Phone Number or Address</small>
-        <%= f.text_field :contact, required: '', class: 'form-control' %>
+        <%= f.text_field :contact, required: '', class: 'form-control' %></p>
         
       </div>
       <div class="field control-label form-group" id="attending_js">
         <div class='rd-button'>
-          <%= f.label :NOT_attending %>
-          <%= f.radio_button :attending, "no", checked: true, class: 'radio-inline' %>
+          <p><%= f.label :NOT_attending %>
+          <%= f.radio_button :attending, "no", checked: true, class: 'radio-inline' %></p>
         </div>
         <div class='rd-button'>
-          <%= f.label :attending %>
-          <%= f.radio_button :attending, "yes", class: 'radio-inline rd-button'  %>
+          <p><%= f.label :attending %>
+          <%= f.radio_button :attending, "yes", class: 'radio-inline rd-button'  %></p>
         </div>
       </div>
       <div class="field control-label disabled form-group" id="party_size_js">
-        <%= f.label :party_size %>
+        <p><%= f.label :party_size %>
         <small>Total people in your party including yourself</small>
-        <%= f.number_field :party_size, class: 'form-control' %>
+        <%= f.number_field :party_size, class: 'form-control' %></p>
       </div>
         </br>
       <div class="actions form-group">
-        <%= f.submit 'RSVP', class: "btn btn-default" %>
+        <p><%= f.submit 'RSVP', class: "btn btn-default" %></p>
       </div>
     <% end %>
   </div>
