--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -8,24 +8,24 @@
     <%= form_tag("/send_mail", method: "post", role: 'form') do%>
 
       <div class="field control-label form-group" >
-        <%= label_tag :name %>
-        <%= text_field_tag :name, nil, required: '', class: 'form-control'  %>
+        <p><%= label_tag :name %></p>
+        <p><%= text_field_tag :name, nil, required: '', class: 'form-control'  %></p>
       </div>
 
       <div class="field control-label form-group" >
-        <%= label_tag :email %>
-        <%= text_field_tag :email, nil, required: '', class: 'form-control' %>
+        <p><%= label_tag :email %></p>
+        <p><%= text_field_tag :email, nil, required: '', class: 'form-control' %></p>
       </div>
         
       <div class="field control-label form-group">
-        <%= label_tag :message %>
-        <%= text_area_tag :message, nil, class: 'form-control', rows: '8' %>
+        <p><%= label_tag :message %></p>
+        <p><%= text_area_tag :message, nil, class: 'form-control', rows: '8' %></p>
       </div>
 
         </br>
 
       <div class="actions form-group">
-        <%= submit_tag 'Send Message', class: "btn btn-default" %>
+        <p><%= submit_tag 'Send Message', class: "btn btn-default" %></p>
       </div>
       
     <% end %>
