--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,30 +1,18 @@
-<<<<<<< HEAD
 <div class='my-home-form'>
 	<%= render 'image_carousel' %>
 <b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehachapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %>
-=======
-<div class='my-form'>
-<p class="font-medium"><b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehahcapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %></p>
->>>>>>> feature/nav_bar_font
 </br>
 </br>
 <p class="font-medium"><b>Date:</b> August 30, 2014</p>
 </br>
 </br>
-<<<<<<< HEAD
-<b>Start Time:</b> 6pm
+<p class="font-medium"><b>Start Time:</b> 6pm</p>
 </br>
 </br>
-Please RSVP and sign the digital guestbook!
-</br>
-</br>
-If you mess up on your RSVP contact Katie, Zack, Brandon or Colleen and they can fix it for you.
-=======
 <p class="font-medium">Please RSVP and sign the digital guestbook!</p>
 </br>
 </br>
 <p class="font-medium">If you have a question please select "Contact" from the link above. Remember we are busy trying to set up a wedding so we may not be able to respond to every question and if we do respond it could take time.</p>
->>>>>>> feature/nav_bar_font
 </br>
 </br>
 </div>
