some more updates

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class='my-home-form'>
 	<%= render 'image_carousel' %>
-<b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehachapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %>
+<p class="font-medium"><b>Wedding Location:</b> <%= link_to('30301 Sheeptrail Ct, Tehachapi CA, 93561','http://www.google.com/maps/place/30301+Sheeptrail+Ct,+Tehachapi,+CA+93561' ,:target => "_blank") %></p>
 </br>
 </br>
 <p class="font-medium"><b>Date:</b> August 30, 2014</p>
@@ -12,7 +12,7 @@
 <p class="font-medium">Please RSVP and sign the digital guestbook!</p>
 </br>
 </br>
-<p class="font-medium">If you have a question please select "Contact" from the link above. Remember we are busy trying to set up a wedding so we may not be able to respond to every question and if we do respond it could take time.</p>
+<p class="font-medium">If you mess up on the RSVP please contact Katie, Zack, Brandon, or Colleen and they can fix it for you</p>
 </br>
 </br>
 </div>
