--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -13,7 +13,7 @@
 #top-nav-bar {
 	border: 1px solid;
   border-radius: 10px;
-  background-image:url('ribbon3.png');
+  background-image: asset-url('ribbon3.png');
 }
 
 .buttons-mine{
