--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -30,10 +30,6 @@ div.carousel {
   height: 640px;
 }
 
-/*h1 {
-	font-family: "alger";
-}*/
-
 img.my-images {
 	margin-left: auto;
   margin-right: auto;
@@ -107,20 +103,24 @@ a:hover
   margin-right: auto;
   margin-top: 20px;
 }
-/*
+
 p {
 	font-family: "goudos";
 }
-*/
-/*@font-face {
+
+h1 {
 	font-family: "alger";
-	src: asset-url(/assets/fonts/ALGER.TTG);
+}
+
+@font-face {
+	font-family: "alger";
+	src: font-url(/assets/fonts/ALGER.TTG);
 }
 
 @font-face {
 	font-family: "goudos";
-	src: asset-url(/assets/fonts/GOUDOS.TTG);
-}*/
+	src: font-url(/assets/fonts/GOUDOS.TTG);
+}
 
 .font-large {
 	font-size:1.8em;
