--- a/app/assets/stylesheets/my_styles.css
+++ b/app/assets/stylesheets/my_styles.css
@@ -114,12 +114,12 @@ h1 {
 
 @font-face {
 	font-family: "alger";
-	src: asset-url("/assets/fonts/ALGER.TTG");
+	src: url("/assets/fonts/ALGER.TTG");
 }
 
 @font-face {
 	font-family: "goudos";
-	src: asset-url("/assets/fonts/GOUDOS.TTG");
+	src: url("/assets/fonts/GOUDOS.TTG");
 }
 
 .font-large {
